Fixed button alignment

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,8 @@
+.download-cv {
+   /* margin: 0 auto;
+   text-align: center; */
+}
+
 /*! HERO */
 
 #hero img {
